<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rubrics"
            android:icon="@drawable/ic_menu_rubrics"
            android:title="@string/menu_rubrics"
            android:checked="true"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_best"
            android:icon="@drawable/ic_menu_best"
            android:title="@string/menu_best"/>
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send"/>
    </group>

</menu>
