<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_fragment_news"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:layout_marginBottom="8dp"/>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_fragment_news"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_v01_fragment_news"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_v01_fragment_news"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_title_v01_fragment_news"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_first_v01_fragment_news"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_second_half"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_third_v01_fragment_news"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_fourth_v01_fragment_news"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"/>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

    </LinearLayout>

</ScrollView>
