<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="16dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="#fff"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_post_list"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_txtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_post_list"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/image_imgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_post_list"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/author_post_list"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/source_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity=""
                android:text="@string/source_post_list"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
