<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_fragment_profile"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:layout_marginBottom="6dp"/>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_fragment_profile"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <TextView
                android:id="@+id/status_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_fragment_profile"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
