<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_fragment_send"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:layout_marginBottom="6dp"/>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_fragment_send"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title_fragment_profile"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/title_editTxt"
            android:labelFor="@id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/description_editTxt"
            android:labelFor="@id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:imeOptions="actionDone"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_send_post"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:gravity="center"
                android:onClick="btnSendPost"
                android:text="@string/btn_fragment_profile"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
