<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toAntiquityActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_antiquity"
                android:src="@drawable/ic_antiquity"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_antiquity"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toMiddleAgesActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_middle_ages"
                android:src="@drawable/ic_middle_ages"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_middle_ages"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toNewTimeActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_new_time"
                android:src="@drawable/ic_new_time"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_new_time"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toTwentiethActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_twentieth"
                android:src="@drawable/ic_twentieth"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_twentieth"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toTwentyFirstActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_twenty_first"
                android:src="@drawable/ic_twenty_first"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_twenty_first"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="toOthersActivity">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/rubrics_others"
                android:src="@drawable/ic_others"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubrics_others"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorDark"/>
        </LinearLayout>

    </TableRow>

</TableLayout>