<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".antiquity.AntiquityActivity"
    tools:showIn="@layout/activity_antiquity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toAncientEgyptActivity">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="@dimen/rubrics_margin"
                    android:contentDescription="@string/antiquity_eqypt"
                    android:src="@drawable/ic_antiquity_egypt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/rubrics_margin"
                    android:text="@string/antiquity_eqypt"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorDark" />

            </LinearLayout>

        </TableRow>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toAncientGreeceActivity">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="@dimen/rubrics_margin"
                    android:contentDescription="@string/antiquity_greece"
                    android:src="@drawable/ic_antiquity_greece"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/rubrics_margin"
                    android:text="@string/antiquity_greece"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorDark"/>

            </LinearLayout>

        </TableRow>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="toAncientRomeActivity">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="@dimen/rubrics_margin"
                    android:contentDescription="@string/antiquity_rome"
                    android:src="@drawable/ic_antiquity_rome"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/rubrics_margin"
                    android:text="@string/antiquity_rome"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorDark"/>

            </LinearLayout>

        </TableRow>

        <View android:layout_width="match_parent" android:layout_height="2dp" android:background="#50707070"/>

    </TableLayout>

</ScrollView>